--- a/app/views/buses/_bus.html.erb
+++ b/app/views/buses/_bus.html.erb
@@ -21,7 +21,7 @@
 
   <p>
     <strong>Departing time:</strong>
-    <%= bus.departing_time %>
+    <%= bus.departing_time.strftime("%H:%M %p") %>
   </p>
 
   <p>
