--- a/app/views/travellers/_form.html.erb
+++ b/app/views/travellers/_form.html.erb
@@ -20,6 +20,9 @@
     <%= f.number_field :phone_number %>
   </div>
   <div class="field">
+    <%= f.label :number_of_seats %><br />
+    <%= f.number_field :number_of_seats %>
+  <div class="field">
     <%= f.label :bus %><br />
     <%= f.text_field :bus %>
   </div>
