--- a/app/views/travellers/show.html.erb
+++ b/app/views/travellers/show.html.erb
@@ -12,6 +12,11 @@
 </p>
 
 <p>
+  <b>Number of seats:</b>
+  <%= @traveller.number_of_seats %>
+</p>
+
+<p>
   <b>Bus:</b>
   <%= @traveller.bus %>
 </p>
