--- a/app/views/travellers/index.html.erb
+++ b/app/views/travellers/index.html.erb
@@ -24,11 +24,12 @@
 
     <td><%= link_to 'Show', [traveller.bus, traveller] %></td>
     <td><%= link_to 'Edit', edit_bus_traveller_path(traveller.bus, traveller) %></td>
-    <td><%= link_to 'Destroy', [traveller.bus, traveller], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= button_to 'Destroy', [traveller.bus, traveller], method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Traveller', new_bus_traveller_path(params[:bus_id]) %>
+
+<%= current_user.booked == true ? "You have already booked a seat" : link_to('Book a seat', new_bus_traveller_path) %>
