Added devise views

--- a/app/views/buses/_bus.html.erb
+++ b/app/views/buses/_bus.html.erb
@@ -5,6 +5,15 @@
   </p>
 
   <p>
+    <strong>Name:</strong>
+    <%= bus.name %>
+  </p>
+
+  <p>
+    <strong>photo:</strong>
+    <%= bus.photo %>
+  </p>
+  <p>
     <strong>Capacity:</strong>
     <%= bus.capacity %>
   </p>
