--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,12 +7,18 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to "Home", root_path, class: "nav-link active" %>
+          <%= link_to "Home", root_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Buses", buses_path, class: "nav-link active" %>
+          <%= link_to "Buses", buses_path, class: "nav-link" %>
         </li>
-        <%= user_signed_in? ? (link_to "Sign out", destroy_user_session_path, method: :delete, class: "nav-link active") : (link_to "Sign in", new_user_session_path, class: "nav-link active") %>
+        <%= user_signed_in? ? (link_to "Sign out", destroy_user_session_path, method: :delete, class: "nav-link") : (link_to "Sign in", new_user_session_path, class: "nav-link") %>
+
+        <% if user_signed_in? %>
+        <li class="nav-item">
+            <p class='nav-link'>Hello <%= current_user.name %></p>
+        </li>
+        <% end %>
       </ul>
     </div>
   </div>
