--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,7 +5,11 @@
 }
 
 body {
-  background: linear-gradient(to right, #f6d365 0%, #fda085 100%);
+  background: linear-gradient(to right, #faf7f0 0%, #f5f5f5 100%);
+}
+
+.navbar {
+  background-color: #cdfcf6;
 }
 
 .card {
@@ -27,4 +31,44 @@ h1::after {
   background: #000;
   margin-top: 10px;
   margin: auto;
+}
+
+.account-block {
+  padding: 0;
+  background-image: url(https://media.istockphoto.com/photos/login-online-form-cyber-security-concept-image-picture-id1364159707?b=1&k=20&m=1364159707&s=170667a&w=0&h=Hh8Rs1MLmcAjBIyoXWt9BmOZT9VvpjVwa_JFLDVoPec=);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  position: relative;
+}
+.account-block .overlay {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.account-block .account-testimonial {
+  text-align: center;
+  color: #fff;
+  position: absolute;
+  margin: 0 auto;
+  padding: 0 1.75rem;
+  bottom: 3rem;
+  left: 0;
+  right: 0;
+}
+
+.text-theme {
+  color: #5369f8 !important;
+}
+
+.btn-theme {
+  background-color: #5369f8;
+  border-color: #5369f8;
+  color: #fff;
 }
