--- a/app/views/buses/_form.html.erb
+++ b/app/views/buses/_form.html.erb
@@ -17,6 +17,15 @@
   </div>
 
   <div>
+    <%= form.label :name, style: "display: block" %>
+    <%= form.text_field :name %>
+  </div>
+
+  <div>
+    <%= form.label :photo, style: "display: block" %>
+    <%= form.file_field :photo %>
+
+  <div>
     <%= form.label :capacity, style: "display: block" %>
     <%= form.number_field :capacity %>
   </div>
