--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -13,3 +13,12 @@
     </ul>
   </div>
 <% end %>
+<div class="container mt-5"><div class="container mt-5">
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6">
+            <div class="alert alert_info"> <button aria-hidden="true" data-dismiss="alert" class="close" type="button">&times;</button> <strong><%= notice %></strong> </div>
+        </div>
+    </div>
+</div>
+
+
