--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,7 +3,7 @@ body {
 }
 
 .navbar {
-  background-color: #cdfcf6;
+  background: linear-gradient(to right, #144261 0%, #197dc0 100%);
 }
 
 h1::after {
@@ -72,6 +72,7 @@ body {
   border: none;
   border-top: 1px solid rgba(34, 36, 38, 0.1);
   box-shadow: none;
+  margin-left: 3rem;
 }
 .card {
   font-size: 1em;
@@ -110,4 +111,61 @@ body {
 }
 .btn {
   margin-top: auto;
+}
+/* .card {
+  width: 400px;
+  background-color: #fff;
+  border: none;
+  border-radius: 12px;
+} */
+label.radio {
+  cursor: pointer;
+  width: 100%;
+}
+label.radio input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+label.radio span {
+  padding: 7px 14px;
+  border: 2px solid #eee;
+  display: inline-block;
+  color: #039be5;
+  border-radius: 10px;
+  width: 100%;
+  height: 48px;
+  line-height: 27px;
+}
+label.radio input:checked + span {
+  border-color: #039be5;
+  background-color: #81d4fa;
+  color: #fff;
+  border-radius: 9px;
+  height: 48px;
+  line-height: 27px;
+}
+.form-control {
+  margin-top: 10px;
+  height: 48px;
+  border: 2px solid #eee;
+  border-radius: 10px;
+}
+.form-control:focus {
+  box-shadow: none;
+  border: 2px solid #039be5;
+}
+.agree-text {
+  font-size: 12px;
+}
+.terms {
+  font-size: 12px;
+  text-decoration: none;
+  color: #039be5;
+}
+.confirm-button {
+  height: 50px;
+  border-radius: 10px;
 }
