--- a/app/views/travellers/index.html.erb
+++ b/app/views/travellers/index.html.erb
@@ -30,10 +30,20 @@
     
     </div>
   </div>
-  <%= current_user.booked == true ? "You have already booked a seat" : link_to('Book a seat', new_bus_traveller_path) %>
+
+
+  
 
 
   <!-- End of card -->
 
 </div>
 <% end %>
+
+ <% if current_user.booked %>
+  <p class="text-center">
+    You have booked a bus
+  </p>
+  <% else %>
+  <%= link_to 'book', new_bus_traveller_path(@bus), :class => "btn btn-primary" %>
+  <% end %>
