--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,9 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cormorant:ital,wght@0,400;0,500;0,600;0,700;1,300&family=Hind+Siliguri:wght@300;400;500;600;700&family=Inconsolata:wght@200;300;400;500;700&family=Noto+Sans+Mono:wght@100;300;400;500;700&family=Secular+One&display=swap");
+
+/* font-family: 'Amatic SC', cursive;
+font-family: 'Cormorant', serif;
+font-family: 'Hind Siliguri', sans-serif;
+font-family: 'Inconsolata', monospace;
+font-family: 'Noto Sans Mono', monospace;
+font-family: 'Secular One', sans-serif; */
+
 body {
   background: linear-gradient(to right, #faf7f0 0%, #f5f5f5 100%);
+  font-family: "Cormorant", serif !important;
+  font-size: 1.5rem !important;
 }
 
 .navbar {
   background: linear-gradient(to right, #144261 0%, #197dc0 100%);
+  color: #fff;
 }
 
 h1::after {
