--- a/app/views/buses/edit.html.erb
+++ b/app/views/buses/edit.html.erb
@@ -1,10 +1,9 @@
-<h1>Editing bus</h1>
+<h1 class='text-center'>Editing bus</h1>
 
 <%= render "form", bus: @bus %>
 
 <br>
 
-<div>
-  <%= link_to "Show this bus", @bus %> |
-  <%= link_to "Back to buses", buses_path %>
+<div class="d-flex justify-content-center">
+  <%= link_to "Back to buses", buses_path, :class => "btn btn-primary" %>
 </div>
