--- a/app/views/buses/new.html.erb
+++ b/app/views/buses/new.html.erb
@@ -1,9 +1,10 @@
-<h1>New bus</h1>
+<h1 class='text-center'>New bus</h1>
 
 <%= render "form", bus: @bus %>
 
 <br>
 
-<div>
-  <%= link_to "Back to buses", buses_path %>
+<div class="d-flex justify-content-center">
+
+  <%= link_to "Back to buses", buses_path , :class => "btn btn-primary " %>
 </div>
