--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,8 +9,8 @@ font-family: 'Secular One', sans-serif; */
 
 body {
   background: linear-gradient(to right, #faf7f0 0%, #f5f5f5 100%);
-  font-family: "Cormorant", serif !important;
-  font-size: 2rem !important;
+  font-family: "Hind Siliguri", sans-serif !important;
+  font-size: 1.5rem !important;
 }
 
 .navbar {
